# philslib

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  Project.cbp  README.md  appveyor.yml  build.bat  build.sh  build_tests.bat  build_tests.sh  format.bat  format.sh  generate_build_scripts.bat  generate_build_scripts.sh  phils_lib_todo.txt  python.py  test.bat  test.sh  unittest
ci/: appveyor.bat  travis.sh
include/: algorithm.hpp  bitmask.hpp  compiler.hpp  concurrent.hpp  container.hpp  except.hpp  functional.hpp  hash.hpp  integer.hpp  io.hpp  iterator.hpp  lowlevel.hpp  macros.hpp  memory.hpp  metafunctions.hpp  monitor.hpp  numeric.hpp  os.hpp  string.hpp  threadpool.hpp  threadsafequeue.hpp  utility.hpp
include/pl/: algorithm.hpp  alloca.hpp  annotations.hpp  anonymous_variable.hpp  apply.hpp  as_bytes.hpp  as_const.hpp  as_ptr_const.hpp  asprintf.hpp  assert.hpp  begin_end.hpp  begin_end_macro.hpp  bit.hpp  bitmask.hpp  bits.hpp  bswap.hpp  byte.hpp  char_to_int.hpp  checked_delete.hpp  cheshire_cat.hpp  compiler.hpp  concept_poly.hpp  concurrent.hpp  container.hpp  current_function.hpp  eprintf.hpp  except.hpp  for_each_argument.hpp  forever.hpp  format_string.hpp  functional.hpp  fwd.hpp  glue.hpp  hash.hpp  hexify.hpp  inline.hpp  integer.hpp  invoke.hpp  io.hpp  iterate_reversed.hpp  (+49 more)
include/pl/algo/: clamp.hpp  destroy.hpp  destroy_at.hpp  destroy_n.hpp  erase.hpp  for_each_n.hpp  gather.hpp  ranged_algorithms.hpp  slide.hpp  uninitialized_default_construct.hpp  uninitialized_default_construct_n.hpp  uninitialized_move.hpp  uninitialized_move_n.hpp  uninitialized_value_construct.hpp  uninitialized_value_construct_n.hpp
include/pl/cont/: at.hpp  back.hpp  container_traits.hpp  data.hpp  empty.hpp  front.hpp  make_array.hpp  size.hpp  ssize.hpp  to_array.hpp
include/pl/meta/: all.hpp  all_true.hpp  any.hpp  bool_constant.hpp  bool_pack.hpp  conjunction.hpp  container_traits.hpp  detection_idiom.hpp  disable_if.hpp  disjunction.hpp  identity.hpp  is_initializer_list.hpp  is_reference_wrapper.hpp  iterator_traits.hpp  negation.hpp  nested_types.hpp  none.hpp  remove_cvref.hpp  type_identity.hpp  uncvref.hpp  unqualified.hpp  unwrap_ref_decay.hpp  unwrap_reference.hpp  void_t.hpp
include/pl/thd/: concurrent.hpp  monitor.hpp  then.hpp  thread_pool.hpp  thread_safe_queue.hpp
src/: ThreadPool.cpp  except.cpp  lowlevel.cpp  memory.cpp  numeric.cpp  string.cpp  threadpool.cpp  utility.cpp
src/pl/: asprintf.cpp  eprintf.cpp  except.cpp  lowlevel.cpp  memory.cpp  numeric.cpp  print_bytes_as_hex.cpp  strdup.cpp  string.cpp  threadpool.cpp  timer.cpp  utility.cpp
src/pl/thd/: thread_pool.cpp
test/: doctest.h
test/include/: cheshire_cat_impl_type.hpp  cheshire_cat_test_type.hpp  destroy_test_type.hpp  freeer.hpp  static_assert.hpp
test/src/: alloca_test.cpp  apply_test.cpp  as_bytes_test.cpp  as_const_test.cpp  as_ptr_const_test.cpp  asprintf_test.cpp  assert_test.cpp  begin_end_test.cpp  bit_test.cpp  bitmask_test.cpp  bits_test.cpp  bswap_test.cpp  byte_test.cpp  char_to_int_test.cpp  checked_delete_test.cpp  cheshire_cat_impl_type.cpp  cheshire_cat_test.cpp  cheshire_cat_test_type.cpp  concept_poly_test.cpp  current_function_test.cpp  destroy_test_type.cpp  eprintf_test.cpp  except_test.cpp  for_each_argument_test.cpp  freeer.cpp  fwd_test.cpp  glue_test.cpp  hash_test.cpp  hexify_test.cpp  integer_test.cpp  invoke_test.cpp  iterate_reversed_test.cpp  lift_test.cpp  make_from_tuple_test.cpp  memxor_test.cpp  named_operator_test.cpp  negate_predicate_test.cpp  no_macro_substitution_test.cpp  no_unique_address_test.cpp  noncopyable_test.cpp  (+23 more)
test/src/algo/: clamp_test.cpp  destroy_test.cpp  erase_test.cpp  for_each_n_test.cpp  slide_test.cpp  uninitialized_construction_test.cpp
test/src/cont/: at_test.cpp  back_test.cpp  data_test.cpp  empty_test.cpp  front_test.cpp  make_array_test.cpp  size_test.cpp  ssize_test.cpp  to_array_test.cpp
test/src/meta/: bool_constant_test.cpp  conjunction_test.cpp  container_traits_test.cpp  detection_idiom_test.cpp  disable_if_test.cpp  disjunction_test.cpp  identity_test.cpp  is_initializer_list_test.cpp  is_reference_wrapper_test.cpp  iterator_traits_test.cpp  negation_test.cpp  nested_types_test.cpp  none_test.cpp  remove_cvref_test.cpp  type_identity_test.cpp  unwrap_ref_decay_test.cpp  unwrap_reference_test.cpp  void_t_test.cpp
test/src/thd/: concurrent_test.cpp  monitor_test.cpp  then_test.cpp  thread_pool_test.cpp  thread_safe_queue_test.cpp
